# Hybrid-Quantum-Classical-MAPF

./: .gitignore  CMakeLists.txt  LICENSE  README.md  STATUS.md
bench/: maxcut.md  neal.md  neal_compare.py  opt_log.md  plot_quality.py  plot_scaling.py  quality.csv  run_maxcut.sh  scaling.csv  scaling.md  tempering.md
data/: .gitignore  download_gset.sh  gen_data.py
data/maps/: random-32-32.map  room-32-32.map  warehouse-34-22.map
data/scenarios/: empty-32-32.scen  random-32-32.scen  room-32-32.scen  warehouse-34-22.scen
include/anneal/: annealer.hpp  bqm.hpp  bruteforce.hpp  fast_annealer.hpp  multispin.hpp  parallel.hpp  parallel_tempering.hpp  rng.hpp  schedule.hpp
include/anneal/problems/: classical_maxcut.hpp  maxcut.hpp  partition.hpp
mapf/: cbs.hpp  conflict_qubo.hpp  grid.hpp  path_gen.hpp  plan.hpp  plan_io.hpp  rolling.hpp  scenario.hpp  solver.hpp  verifier.hpp
mapf/bench/: penalty_experiment.md  plot_rolling.py  plot_success.py  results.csv  results.md  rolling.csv  rolling.md
mapf/bench/maps/: obstacles16.map  rooms16.map
mapf/viz/: app.html  demo_crossing.plan  demo_crossing.scen  demo_lifelong.plan  demo_obstacles.map  demo_obstacles.plan  demo_rooms.map  demo_rooms.plan  demo_rooms.scen  make_demos.sh  maxcut.html  render_plan.py  screenshots.py  serve.py
src/: anneal_stream.cpp  bench_common.hpp  bench_mapf.cpp  bench_multispin.cpp  bench_quality.cpp  bench_rolling.cpp  bench_scaling.cpp  bench_tempering.cpp  bench_throughput.cpp  compare_maxcut.cpp  demo_obstacles.cpp  demo_partition.cpp  demo_rolling.cpp  mapf_penalty_experiment.cpp  solve_cbs.cpp  solve_mapf.cpp  solve_maxcut.cpp  solve_stream.cpp
tests/: test_annealer.cpp  test_bqm.cpp  test_cbs.cpp  test_conflict_qubo.cpp  test_fast_annealer.cpp  test_mapf_io.cpp  test_multispin.cpp  test_obstacles.cpp  test_parallel.cpp  test_path_gen.cpp  test_problems.cpp  test_rolling.cpp  test_solver.cpp  test_tempering.cpp  test_verifier.cpp
tests/data/: sample.map  sample.scen
